<resources>
    <string name="app_name">Baiku</string>
    <string name="title_activity_main_int">Baiku</string>
    <string name="coordinates">No coordinates to display :(</string>
    <string name="main_menu">menu</string>
    <string name="emptyMenu">no information to display</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="action_settings">settings</string>
    <string name="label_activity_gameMode">Game Mode</string>
    <string name="data">data</string>
    <string name="minigame">minigame</string>
    <string name="points_text">Points:</string>
    <string name="points_score">0</string>
    <string name="zoombutton_text">Zoom to me!</string>
    <string name="targetbutton_text">Find Target</string>
    <string name="login_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="label_login">Login</string>
    <string name="register_click_text">Register here!</string>
    <string name="title_activity_register">Register</string>
    <string name="email_text">Email</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="start">Start the game!</string>
    <string name="gyroscope">  </string>
    <string name="acceleration">  </string>
    <string name="light">  </string>
    <string name="explain">Try to have an acceleration of 2.0 m/s² as well as a light intensity of 1000.0 lx and a rotation vector of 3.0 rad/s to win 100 points. </string>
    <string name="information">Press the button to start</string>
    <string name="timer"> </string>
    <string name="explanation">Try to have an acceleration of 4.0 m/s² while on your bike. You win 50 points if you succeed. </string>
    <string name="startbutton">Start the game</string>
    <string name="started">Something has changed</string>
    <string name="exp_magnetic">Try to find a magnetic field with a magnitude of 1.0 mT (= 1000.0 µT). If you do so, you will get 100 points. </string>
    <string name="song_expl">Try to find or create a very loud noise. If it is loud enough, you will get 50 points!</string>
    <string name="combination_two">Try to find a magnetic field of 1.0 mT as well as a light intensity of 1000.0 lx!</string>
    <string name="powerUpOffensive">Offensive</string>
    <string name="powerUpOffensiveUpdateFrequency">Increase Update Frequency</string>
    <string name="powerUpOffensiveEasyKill">Easy Kill Move</string>
    <string name="powerUpDefensiveStopSignal">Signal Stops Moving</string>
    <string name="powerUpDefensiveTitle">Defensive</string>
    <string name="powerUpDefensiveSound">Only Sound</string>
    <string name="powerUpDefensivePursuer">Show Your Hunter</string>
    <string name="powerUpDefensiveHardKill">Hard Kill Move</string>
    <string name="label_shop">Shop</string>
    <string name="buy_text">Buy</string>
    <string name="login_button_text">Login</string>
    <string name="HowToPowerUps">Power-ups</string>
    <string name="HowToIncreaseUpdateFrequency">Increase update frequency</string>
    <string name="HowToOffensiveUpdateFrequencyText">This decreases the amount of time between updates of your target\'s location.
        Standard update frequency is 32 seconds. Every time you order this power-up, this time is divided by two. Costs 120 Baikoins.
    </string>
    <string name="HowToOffensiveEasyKill">powerUpOffensiveEasyKill</string>
    <string name="HowToOffensiveEasyKillText"> Als je deze power up koopt zal je volgende kill move
        30 keer een knop indrukken worden. Dit is de gemakkelijkste kill move van het spel!
    </string>
    <string name="HowToOffensiveEasyKillText2"> If you buy this power-up, your next assigned kill-move will be "Tap him to death!".
            This is the easiest kill-move in the game. Costs 50 Baikoins.
    </string>
    <string name="HowToDefensiveStopSignalText">Dit zal de update van je postitie voor de personen
        die op je jagen stoppen gedurende 2 minuten. Dit geeft de kans om je jager te ontlopen.
    </string>
    <string name="HowToDefensiveStopSignalText2">This will hide your position from your Hunters for 2 minutes.
        Use this to escape to safety! Costs 120 Baikoins.
    </string>
    <string name="HowToDefensiveSoundText">Gederunde 2 minuten krijgt de jager geen positie van je
        door maar hoort hij je enkel.</string>
    <string name="HowToDefensiveSoundText2">For 2 minutes, your Hunter doesn\'t get your position, but he can hear your surroundings. Costs 100 Baikoins.</string>
    <string name="HowToDefensivePursuerText">Dit geeft de loctaie van je achtervolger weer
        gedurende 4 min en wordt vernieuwd elke 5 seconden.</string>
    <string name="HowToDefensivePursuerText2">This power-up shows the location of one of your Hunters for 4 minutes. Costs 75 Baikoins.</string>
    <string name="HowToDefensiveHardKillText">Je achtervolger zal de snelheid killmove moeten
        uitvoeren. Dus kies je locatie wijs en dit zal hem niet lukken!</string>
    <string name="HowToDefensiveHardKillText2">Your Hunter will have to do the "Get highest speed." kill-move. Costs 150 Baikoins.</string>
    <string name="HowToGamePlayText">Ga op je fiets zitten en start de app.
        Je zal een target aangewezen krijgen en daarop zal je gaan jagen! Probeer bij hem in de
        buurt te geraken en voer de killmove uit! Als het lukt krijg je punten bij, zoniet zal je
        een nieuw target krijgen. Maar pas op het kan zijn dat er ondertussen iemand op jou jaagt
        als hij jou te pakken krijgt zal jij ook punten verliezen. Dus kijk goed rond voor mogelijk
        gevaar. </string>
    <string name="HowToGamePlayText2">Get on your bike and start the Game Mode.
        You will be assigned a target and you have to hunt it! Try to get in his range and complete a
        kill-move. If you succeed, you will be awarded points and Baikoins. If you fail, you are awarded nothing.

        Be careful as you are being hunted on as well! If they catch you, you\'ll lose half of your points.
        Watch out for potential danger!</string>
    <string name="mypoints">mypoints</string>
    <string name="powerUpDefensiveNoExtraPursuers">No New Hunters</string>
    <string name="powerUpDefensiveNoExtraPursuersText">For 2 minutes, you are free of new Hunters! Costs 200 Baikoins.</string>
    <string name="HowToKillMoves">Kill Moves</string>
    <string name="HowToAccelerate">Accelerate!</string>
    <string name="HowToAccelerateText">Reach an acceleration of 20 m/s².</string>
    <string name="HowToSound">Scream him to death!</string>
    <string name="HowToSoundText">Record a sound or scream to reach 85 decibels.</string>
    <string name="HowToShoot">Shoot him down!</string>
    <string name="HowToShootText">Hold your phone like a gun and make a shooting motion.</string>
    <string name="HowToLight">Remove all light!</string>
    <string name="HowToLightText">Go to a dark place or cover your phone.</string>
    <string name="HowToSpeed">Get to your highest speed!</string>
    <string name="HowToSpeedText">Try to go as fast as possible and reach 30 km/h.</string>
    <string name="HowToTap">Tap him to death!</string>
    <string name="HowToTapText">Tap as fast as possible to complete this killmove.</string>

</resources>
