<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mypoints"
        android:title="@string/mypoints">

    </item>
    <item android:title="@string/powerUpOffensive">
        <menu>
            <item
                android:id="@+id/powerUpOffensiveUpdateFrequency"
                android:title="@string/powerUpOffensiveUpdateFrequency"
                android:icon="@drawable/sword"
                />
            <item
                android:id="@+id/powerUpOffensiveEasyKill"
                android:title="@string/powerUpOffensiveEasyKill"
                android:icon="@drawable/sword"
                />
        </menu>
    </item>
    <item android:title="@string/powerUpDefensiveTitle">
        <menu>
            <item
                android:id="@+id/powerUpDefensiveStopSignal"
                android:title="@string/powerUpDefensiveStopSignal"
                android:icon="@drawable/shield"
                />
            <item
                android:id="@+id/powerUpDefensiveNoExtraPursuers"
                android:title="@string/powerUpDefensiveNoExtraPursuers"
                android:icon="@drawable/shield"

                />
            <item
                android:id="@+id/powerUpDefensiveSound"
                android:title="@string/powerUpDefensiveSound"
                android:icon="@drawable/shield"
                />
            <item
                android:id="@+id/powerUpDefensivePursuer"
                android:title="@string/powerUpDefensivePursuer"
                android:icon="@drawable/shield"
                />
            <item
                android:id="@+id/powerUpDefensiveHardKill"
                android:title="@string/powerUpDefensiveHardKill"
                android:icon="@drawable/shield"
                />
        </menu>
    </item>
</menu>