<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/toolbar_low_in_rank"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gameplay"
            android:textSize="@dimen/text_size_title1"
            android:background="#b31217"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToGamePlayText2"
            android:textSize="@dimen/text_size_information"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToPowerUps"
            android:textSize="@dimen/text_size_title1"
            android:background="#b31217"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpOffensiveUpdateFrequency"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToOffensiveUpdateFrequencyText"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpOffensiveEasyKill"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToOffensiveEasyKillText2"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveStopSignal"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveStopSignalText2"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveSound"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveSoundText2"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensivePursuer"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensivePursuerText2"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveNoExtraPursuers"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveNoExtraPursuersText"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveHardKill"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveHardKillText2"
            android:textSize="@dimen/text_size_information"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToKillMoves"
            android:textSize="@dimen/text_size_title1"
            android:background="#b31217"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToAccelerate"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToAccelerateText"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToShoot"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToShootText"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToSound"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToSoundText"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToSpeed"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToSpeedText"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToLight"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToLightText"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToTap"
            android:textSize="@dimen/text_size_title2"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToTapText"
            android:textSize="@dimen/text_size_information"
            android:layout_marginBottom="10dp"/>



    </LinearLayout>
</ScrollView>